# walker

./: CMakeLists.txt  package.xml  readme.md
include/: walker.h
launch/: walker.launch
results/: cppcheck_results.txt  cpplint_results.txt
src/: main.cpp  walker.cpp
